# meta-zsc-eval

./: .envrc  .envrc.EXAMPLE.local  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  pixi.toml  pyproject.toml  run.py
alt_ippo/: obl-4.py
analysis/: cat_and_dog.py  easy_hanabi.py  hanabi_xxp.py  hanabi_xxp2.py  lever_game.py  temp.py  utils.py  xxp_stats.py  zsc_understanding.py
configs/: aider_scaffold.yaml  aider_scaffold_cat_dog.yaml  aider_scaffold_cat_dog_no_instructor.yaml  aider_scaffold_cat_dog_no_instructor_from_tex.yaml  aider_scaffold_cat_dog_no_instructor_from_tex_env_agnostic.yaml  aider_scaffold_jaxmarl.yaml  aider_scaffold_no_instructor.yaml  aider_scaffold_no_instructor_from_tex.yaml  aider_scaffold_no_instructor_from_tex_env_agnostic.yaml  aider_scaffold_no_instructor_from_tex_oc_test.yaml  aider_scaffold_op_gfppoy.yaml  convert_to_latex.yaml  default.yaml  explain_zsc_methods.yaml  general_zsc_knowledge.yaml  initiate_and_train.yaml  initiate_and_train_jaxmarl.yaml  initiate_and_train_op_gfppoy.yaml  initiate_pair_coding.yaml  initiate_pair_coding_jaxmarl.yaml  understand_zsc_paper.yaml
context_files/: __init__.py  test_script.py
experiments/: aider_scaffold.sh  aider_scaffold_cat_dog.sh  aider_scaffold_cat_dog_no_instructor.sh  aider_scaffold_cat_dog_no_instructor_from_tex.sh  aider_scaffold_cat_dog_no_instructor_from_tex_env_agnostic.sh  aider_scaffold_no_instructor.sh  aider_scaffold_no_instructor_from_tex.sh  aider_scaffold_no_instructor_from_tex_env_agnostic.sh  explain_zsc_method.sh  general_zsc_knowledge.sh  tmux_job_runner.sh  (+1 more)
(+137 files in other folders)
